--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
             </div>
         </div>
     </section>
+    <section class="mission-sec">
+        <div class="mission-title-part">
+            <h2 class="mission-title">My mission in <span>2020</span></h2>
+        </div>
+    </section>
 </body>
 </html>
