card part added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,29 @@
         <div class="mission-title-part">
             <h2 class="mission-title">My mission in <span>2020</span></h2>
         </div>
+        <div class="card-part">
+            <div class="card card-mission-bg">
+                <img class="card-img" src="images/illustrators/illustrator-1.png" alt="">
+                <div class="card-body">
+                    <h3 class="card-title">Mission</h3>
+                    <p class="card-para">There is a beautiful saying that God made the country and man made the town.From this ,  one may understand</p>
+                </div>
+            </div>
+            <div class="card card-vission-bg">
+                <img class="card-img" src="images/illustrators/illustrator-2.png" alt="">
+                <div class="card-body">
+                    <h3 class="card-title">Vission</h3>
+                    <p class="card-para">Follow the instructions.It is a good idea do double-check this before the exam.Then move on to the next quetion  </p>
+                </div>
+            </div>
+            <div class="card card-goa-bg">
+                <img class="card-img" src="images/illustrators/illustrator-3.png" alt="">
+                <div class="card-body">
+                    <h3 class="card-title">Goals</h3>
+                    <p class="card-para">The prosperity and development of a country of state almost relies on its good citizens Good citizens  . </p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
