Develop part added

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <section class="header-section">
         <div class="header-part">
-            <div class="header-left-side">
+            <div class="header-title-side">
                 <div class="header-title">
-                    <h1 class="title">Stay Focused On <br><span>Mission 2022</span></h1>
+                    <h1 class="stay-title">Stay Focused On <br><span>Mission 2022</span></h1>
                     <p class="header-para">Shakespeare is one of the greatest poets and dramatists in hte realmm of English literature. What is known about him is very little.  So no trully reliable or authentic biography of Shakespeare can be wirtten.From the gusee  work, it is said that Shakespeare was a successful man of businness. </p>
                     <button class="explore-btn">Explore Now</button>
                     <br>
@@ -23,7 +23,7 @@
                 </div>
 
             </div>
-            <div class="header-right-side">
+            <div class="header-img-side">
                 <div class="header-img-part">
                     <img src="images/person/person-2.png" alt="">
                 </div>
@@ -55,6 +55,22 @@
                     <h3 class="card-title">Goals</h3>
                     <p class="card-para">The prosperity and development of a country of state almost relies on its good citizens Good citizens  . </p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="Develop-sec">
+        <div class="develop-part">
+            <div class="develop-img-side">
+                <div class="dev-img">
+                    <img src="images/pictures/coding.png" alt="">
+                </div>
+            </div>
+            <div class="develop-title-side">
+                <h2 class="dev-title">Develop <br><span>Without Limits</span></h2>
+                <p class="dev-para">Our web dev team specializes in WordPress website creation. We use plug-ins like Elementor or Divi to ensure your business has easy access to make minor edits and changes after the site goes live with minimal effort and no coding required. For many website</p>
+                <br>
+                <button class="dev-btn">Read The Document</button>
             </div>
         </div>
     </section>
