Globa commication added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="dev-img">
                     <img src="images/pictures/coding.png" alt="">
                 </div>
-            </div>
+            </div> 
             <div class="develop-title-side">
                 <h2 class="dev-title">Develop <br><span>Without Limits</span></h2>
                 <p class="dev-para">Our web dev team specializes in WordPress website creation. We use plug-ins like Elementor or Divi to ensure your business has easy access to make minor edits and changes after the site goes live with minimal effort and no coding required. For many website</p>
@@ -74,5 +74,23 @@
             </div>
         </div>
     </section>
+
+ <section class="global-sec">
+     <div class="global-part">
+        <div class="develop-title-side">
+            <h2 class="dev-title">Know Our <br><span>Global Community</span></h2>
+            <p class="dev-para">The English language has certainly become a global language. lobal communication and the English language is an increasing topic being discussed throughout the world. Somecountries are concerned that they will lose their cultural heritage along with their native tongueas a result of the increasing use of the English language. </p>
+            <br>
+            <button class="dev-btn">Submit The Document</button>
+        </div>
+        <div class="develop-img-side">
+            <div class="dev-img">
+                <img src="images/pictures/project.png" alt="">
+            </div>
+        </div> 
+     </div>
+     
+
+ </section>
 </body>
 </html>
