global communication bg added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <br>
             <button class="dev-btn">Submit The Document</button>
         </div>
-        <div class="develop-img-side">
+        <div class="develop-img-side glo-bg">
             <div class="dev-img">
                 <img src="images/pictures/project.png" alt="">
             </div>
