contact  title adde

--- a/index.html
+++ b/index.html
@@ -88,9 +88,23 @@
                 <img src="images/pictures/project.png" alt="">
             </div>
         </div> 
-     </div>
-     
+     </div>    
 
+ </section>
+
+ <section class="contact-section">
+    <div class="contact-title-part">
+        <h1 class="contact-title">Contact Us</h1>
+    </div>
+     <div class="contact-part">
+         <div class="contact-text-part">
+            
+         </div>
+         <div class="contact-touch-side">
+
+         </div>
+
+     </div>
  </section>
 </body>
 </html>
