contact messege added

--- a/index.html
+++ b/index.html
@@ -98,10 +98,32 @@
     </div>
      <div class="contact-part">
          <div class="contact-text-part">
-            
+             <h2 class="form-title">Please fill out this form to contact us</h2>
+            <div class="form-part">
+                <form action="">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                    <br>
+                    <input type="email" placeholder="Email">
+                    <input type="number" placeholder="Phone Number">
+                   
+                </form>
+                <textarea name="Message" id="" cols="60" rows="10" placeholder="Message"></textarea>
+                   <button class="sub-btn">Submit Now</button> 
+            </div>
          </div>
          <div class="contact-touch-side">
-
+            <div class="touch-main">
+                <h3 class="touch-title">Get in Touch</h3>
+                <p>This passage deals with the greatest scientist of the world Alblert Winstein who was born in Ulm</p>
+                <p>Address</p>
+                <p>House # 100, Uttrara Dhaka</p>
+                <h3>Email</h3>
+                <p> <a href="">abdulkaderjilani120@gmail.com</a> </p>
+                <h3>Phone</h3>
+                <p>01795849068</p>
+                <p>01902825543</p>
+            </div>
          </div>
 
      </div>
