footer part added

--- a/index.html
+++ b/index.html
@@ -125,8 +125,13 @@
                 <p>01902825543</p>
             </div>
          </div>
-
      </div>
  </section>
+ <footer>
+     <div class="footer-part">
+         <h1 class="footer-title">Mission <span>2022</span></h1>
+         <p class="footer-para">Hard work, Perseverance, and Determanation for 2022</p>
+     </div>
+ </footer>
 </body>
 </html>
