footer color edite added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-title-side">
                 <div class="header-title">
                     <h1 class="stay-title">Stay Focused On <br><span>Mission 2022</span></h1>
-                    <p class="header-para">Shakespeare is one of the greatest poets and dramatists in hte realmm of English literature. What is known about him is very little.  So no trully reliable or authentic biography of Shakespeare can be wirtten.From the gusee  work, it is said that Shakespeare was a successful man of businness. </p>
+                    <p class="header-para">Its real easy for me to stay focused at school or at work unless I have people around me thats disturbing me,other then that when Im there I leave my communication in the car so I can be focused in one area. Its hard to stay focused when my kids are around because all my attention goes to them. Most of the time when I have to study I have my sister or brother to watch them.. </p>
                     <button class="explore-btn">Explore Now</button>
                     <br>
                     <p>Scroll down to explore more about us</p>
